--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "web-interface-iot",
-  "version": "1.0.0",
-  "description": "Web Interface IoT",
-  "main": "server.js",
-  "dependencies": {
-    "sqlite3": "^3.1.3"
-  },
-  "devDependencies": {},
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/etienne-gauvin/web-interface-iot.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/etienne-gauvin/web-interface-iot/issues"
-  },
-  "homepage": "https://github.com/etienne-gauvin/web-interface-iot#readme"
+  "dependencies": {
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "hbs": "~4.0.1",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
+  }
 }
